<resources>
    <string name="app_name">DisciteOmnesLearningPlatform</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_groups">Group Management</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_out">"Sign out"</string>
    <string name="notifications">"Notifications"</string>
    <string name="button_settings">"Save</string>
    <string name="delete_acc">"Delete Account</string>
    <string name="change_your_username">Change your Username:</string>
    <string name="new_username">New Username</string>
    <string name="change_your_password">Change your Password:</string>
    <string name="new_password">New Password</string>

</resources>