<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.disciteomneslearningplatform.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_groupDetail"
            app:destination="@id/groupDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/groupDetailEditFragment"
        android:name="com.example.disciteomneslearningplatform.ui.groupDetailEdit.GroupDetailEditFragment"
        tools:layout="@layout/fragment_group_edit">
        <argument
            android:name="groupId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.disciteomneslearningplatform.ui.groupManagement.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups">
        <action
            android:id="@+id/action_groupsFragment_to_groupDetailEditFragment"
            app:destination="@id/groupDetailEditFragment">
            <argument
                android:name="groupId"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_home_to_groupDetail"
            app:destination="@id/groupDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.disciteomneslearningplatform.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/groupDetailFragment"
        android:name="com.example.disciteomneslearningplatform.ui.groupDetail.GroupDetailFragment"
        android:label="Group Details">
        <!-- argument to pass the group id -->
        <argument
            android:name="groupId"
            app:argType="string" />
    </fragment>

</navigation>